使用插件管理代码

--- a/jupyter/剑指offer.ipynb
+++ b/jupyter/剑指offer.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [剑指offer题解](https://www.nowcoder.com/ta/coding-interviews)\n",
-    "\n",
-    "## 参考资料\n",
-    "\n",
-    "1. [知乎：剑指offer-Python版](https://zhuanlan.zhihu.com/p/75864673)\n",
-    "2. [github: 剑指offer-Python版](https://github.com/apachecn/Interview/tree/master/docs/Algorithm/%E5%89%91%E6%8C%87offer/Python)\n",
-    "3. [csdn: 剑指offer-Python版](https://blog.csdn.net/xuezhisdc/article/details/52125302)\n"
+    "# [剑指offer题解](https://www.nowcoder.com/ta/coding-interviews)"
    ]
   },
   {
@@ -32,26 +26,32 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "code_folding": []
+   },
    "outputs": [],
    "source": [
+    "# -*- coding:utf-8 -*-\n",
     "class Solution:\n",
     "    # array 二维列表\n",
     "    def Find(self, target, array):\n",
     "        # write code here\n",
-    "        if not array:\n",
+    "        if array is None:\n",
     "            return False\n",
-    "        \n",
-    "        num_row, num_col = len(array), len(array[0])\n",
-    "        i, j = num_row - 1, 0\n",
-    "        \n",
-    "        while i >= 0 and j < num_col:\n",
-    "            if array[i][j] < target:\n",
+    "\n",
+    "        row, colum = len(array), len(array[0])\n",
+    "        i, j = row - 1, 0\n",
+    "\n",
+    "        # 从右上角开始搜索\n",
+    "        while i >= 0 and j < colum:\n",
+    "            if array[i][j] > target:\n",
+    "                i -= 1\n",
+    "            elif array[i][j] < target:\n",
     "                j += 1\n",
-    "            elif array[i][j] > target:\n",
-    "                i-=1\n",
     "            else:\n",
-    "                return True"
+    "                return True\n",
+    "\n",
+    "        return False"
    ]
   },
   {
@@ -72,8 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-15T04:06:38.588001Z",
+     "start_time": "2021-04-15T04:06:38.584774Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# -*- coding:utf-8 -*-\n",
@@ -81,17 +86,14 @@
     "    # s 源字符串\n",
     "    def replaceSpace(self, s):\n",
     "        # write code here\n",
-    "        if not s:\n",
-    "            return s\n",
-    "        \n",
     "        result = ''\n",
-    "        \n",
+    "\n",
     "        for c in s:\n",
     "            if c == ' ':\n",
     "                result += '%20'\n",
     "            else:\n",
     "                result += c\n",
-    "                \n",
+    "\n",
     "        return result"
    ]
   },
@@ -113,8 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-15T04:09:31.272299Z",
+     "start_time": "2021-04-15T04:09:31.268790Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# -*- coding:utf-8 -*-\n",
@@ -127,9 +134,6 @@
     "    # 返回从尾部到头部的列表值序列，例如[1,2,3]\n",
     "    def printListFromTailToHead(self, listNode):\n",
     "        # write code here\n",
-    "        if not listNode:\n",
-    "            return []\n",
-    "        \n",
     "        result, cur = [], listNode\n",
     "        \n",
     "        while cur:\n",
@@ -156,8 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-15T06:20:53.941280Z",
+     "start_time": "2021-04-15T06:20:53.936961Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# -*- coding:utf-8 -*-\n",
@@ -172,11 +181,12 @@
     "        # write code here\n",
     "        if not pre or not tin:\n",
     "            return None\n",
-    "        \n",
-    "        root,index = TreeNode(pre[0]), tin.index(pre[0])\n",
-    "        root.left = self.reConstructBinaryTree(pre[1:index+1], tin[:index])\n",
-    "        root.right = self.reConstructBinaryTree(pre[index+1:], tin[index+1:])\n",
-    "        \n",
+    "\n",
+    "        root, index = TreeNode(pre[0]), tin.index(pre[0])\n",
+    "        root.left = self.reConstructBinaryTree(pre[1:index + 1], tin[:index])\n",
+    "        root.right = self.reConstructBinaryTree(pre[index + 1:],\n",
+    "                                                tin[index + 1:])\n",
+    "\n",
     "        return root"
    ]
   },
@@ -197,29 +207,322 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-15T06:40:16.524676Z",
+     "start_time": "2021-04-15T06:40:16.520405Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# -*- coding:utf-8 -*-\n",
     "class Solution:\n",
     "    def __init__(self):\n",
-    "        self.stack1 = []\n",
-    "        self.stack2 = []\n",
-    "    \n",
+    "        self.stack_first = []\n",
+    "        self.stack_second = []\n",
+    "\n",
     "    def push(self, node):\n",
-    "        # write code here\n",
-    "        self.stack1.append(node)\n",
-    "        \n",
+    "        # 第一个栈负责入队\n",
+    "        self.stack_first.append(node)\n",
+    "\n",
     "    def pop(self):\n",
-    "        # return xx\n",
-    "        if len(self.stack1) == 0 and len(self.stack2) == 0:\n",
+    "        # 第二个负责出栈。如果第二个栈没有数据，就把第一个栈数据全部挪到第二个\n",
+    "        if not self.stack_first and not self.stack_second:\n",
     "            return\n",
-    "        elif len(self.stack2) == 0:\n",
-    "            while self.stack1:\n",
-    "                self.stack2.append(self.stack1.pop())\n",
+    "        elif not self.stack_second:\n",
+    "            while self.stack_first:\n",
+    "                self.stack_second.append(self.stack_first.pop())\n",
+    "\n",
+    "        return self.stack_second.pop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [06-旋转数组的最小数字](https://www.nowcoder.com/practice/9f3231a991af4f55b95579b44b7a01ba)\n",
+    "\n",
+    "> 把一个数组最开始的若干个元素搬到数组的末尾，我们称之为数组的旋转。\n",
+    "输入一个非递减排序的数组的一个旋转，输出旋转数组的最小元素。\n",
+    "NOTE：给出的所有元素都大于0，若数组大小为0，请返回0。\n",
+    "\n",
+    "**知识点：** `二分`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-15T07:02:30.100861Z",
+     "start_time": "2021-04-15T07:02:30.095616Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# -*- coding:utf-8 -*-\n",
+    "class Solution:\n",
+    "    def minNumberInRotateArray(self, rotateArray):\n",
+    "        # 找到第一个比前面元素大的；如果都没有就是第一个元素\n",
+    "        if not rotateArray:\n",
+    "            return 0\n",
+    "\n",
+    "        target = 0\n",
+    "        length = len(rotateArray)\n",
+    "\n",
+    "        for i in range(0, length - 1):\n",
+    "            if rotateArray[i] > rotateArray[i + 1]:\n",
+    "                return rotateArray[i + 1]\n",
+    "\n",
+    "        return rotateArray[0]\n",
+    "\n",
+    "    def binarySearch(self, rotateArray):\n",
+    "        # 分为递增数组和旋转数组，找出旋转那部分\n",
+    "        if not rotateArray:\n",
+    "            return 0\n",
+    "        \n",
+    "        l = 0\n",
+    "        r = len(rotateArray) - 1\n",
+    "\n",
+    "        while l < r:\n",
+    "            m = l + (r - l) // 2\n",
     "            \n",
-    "        return self.stack2.pop()"
+    "            if rotateArray[m] <= rotateArray[r]:\n",
+    "                r = m\n",
+    "            else:\n",
+    "                l = m + 1\n",
+    "                \n",
+    "        return rotateArray[l]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [07-斐波那契数列](https://www.nowcoder.com/practice/c6c7742f5ba7442aada113136ddea0c3)\n",
+    "\n",
+    "> 大家都知道斐波那契数列，现在要求输入一个整数n，请你输出斐波那契数列的第n项（从0开始，第0项为0，第1项是1）。\n",
+    "n≤39\n",
+    "\n",
+    "**知识点：** `数组`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-15T07:16:38.521355Z",
+     "start_time": "2021-04-15T07:16:38.518028Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# -*- coding:utf-8 -*-\n",
+    "class Solution:\n",
+    "    def Fibonacci(self, n):\n",
+    "        # write code here\n",
+    "        \n",
+    "        if n == 0:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            first, second = 0, 1\n",
+    "            \n",
+    "            for _ in range(n):\n",
+    "                first, second = second, first + second\n",
+    "                \n",
+    "        return first"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [08-跳台阶](https://www.nowcoder.com/practice/8c82a5b80378478f9484d87d1c5f12a4)\n",
+    "\n",
+    "> 一只青蛙一次可以跳上1级台阶，也可以跳上2级。求该青蛙跳上一个n级的台阶总共有多少种跳法（先后次序不同算不同的结果）。\n",
+    "\n",
+    "**知识点：** `递归`\n",
+    "\n",
+    "**思路：**\n",
+    "1. 斐波那契数列递归或者迭代\n",
+    "2. 动态规划：dp[n] = dp[n-1] + dp[n-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -*- coding:utf-8 -*-\n",
+    "class Solution:\n",
+    "    def jumpFloor(self, number):\n",
+    "        if number == 0 or number == 1:\n",
+    "            return number\n",
+    "        \n",
+    "        a, b = 1, 1\n",
+    "        \n",
+    "        for i in range(2, number+1):\n",
+    "            a, b = b, a + b\n",
+    "            \n",
+    "        return b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [09-变态跳台阶](https://www.nowcoder.com/practice/22243d016f6b47f2a6928b4313c85387)\n",
+    "\n",
+    "> 一只青蛙一次可以跳上1级台阶，也可以跳上2级……它也可以跳上n级。求该青蛙跳上一个n级的台阶总共有多少种跳法。\n",
+    "\n",
+    "**知识点：** `贪心`\n",
+    "\n",
+    "**思路：**\n",
+    "1. f(n) = f(n-1) + f(n-2) + ... + f(0) 转为 f(n) = 2 * f(n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-15T07:51:17.901233Z",
+     "start_time": "2021-04-15T07:51:17.897596Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# -*- coding:utf-8 -*-\n",
+    "class Solution:\n",
+    "    def jumpFloorII(self, number):\n",
+    "        # f(n) = f(n-1) + f(n-2) + ... + f(0)\n",
+    "        # f(n) = 2 * f(n-1)\n",
+    "        if number == 0 or number == 1:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            a, b = 1, 2\n",
+    "            for i in range(2, number + 1):\n",
+    "                b = a << 1\n",
+    "                a = b\n",
+    "\n",
+    "            return b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [10-矩形覆盖](https://www.nowcoder.com/practice/72a5a919508a4251859fb2cfb987a0e6)\n",
+    "\n",
+    "> 我们可以用2*1的小矩形横着或者竖着去覆盖更大的矩形。请问用n个2*1的小矩形无重叠地覆盖一个2*n的大矩形，总共有多少种方法？\n",
+    "比如n=3时，2*3的矩形块有3种覆盖方法：\n",
+    "\n",
+    "**知识点：** `递归`\n",
+    "\n",
+    "**思路：**\n",
+    "1. f(n) = f(n-1) + f(n-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-15T08:05:00.910576Z",
+     "start_time": "2021-04-15T08:05:00.906753Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# -*- coding:utf-8 -*-\n",
+    "class Solution:\n",
+    "    def rectCover(self, number):\n",
+    "        if number < 3:\n",
+    "            return number\n",
+    "        else:\n",
+    "            a, b = 1, 2\n",
+    "            \n",
+    "            for i in range(3, number + 1):\n",
+    "                a, b = b, a + b\n",
+    "                \n",
+    "            return b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [11-二进制中1的个数](https://www.nowcoder.com/practice/8ee967e43c2c4ec193b040ea7fbb10b8)\n",
+    "\n",
+    "> 输入一个整数，输出该数32位二进制表示中1的个数。其中负数用补码表示。\n",
+    "\n",
+    "**知识点：** `数学`\n",
+    "\n",
+    "**思路：**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-15T08:23:59.452893Z",
+     "start_time": "2021-04-15T08:23:59.450089Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def NumberOf1(self, n):\n",
+    "        count = 0\n",
+    "        while n != 0:\n",
+    "            n = (n - 1) & n\n",
+    "            count = count + 1\n",
+    "        return count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [12-数值的整数次方](https://www.nowcoder.com/practice/1a834e5e3e1a4b7ba251417554e07c00)\n",
+    "\n",
+    "> 给定一个double类型的浮点数base和int类型的整数exponent。求base的exponent次方。\n",
+    "保证base和exponent不同时为0。不得使用库函数，同时不需要考虑大数问题，也不用考虑小数点后面0的位数。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-15T08:33:07.585755Z",
+     "start_time": "2021-04-15T08:33:07.581544Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# -*- coding:utf-8 -*-\n",
+    "class Solution:\n",
+    "    def Power(self, base, exponent):\n",
+    "        # write code here\n",
+    "        if exponent == 0:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            # 负数特殊处理\n",
+    "            if exponent < 0:\n",
+    "                base = 1/base\n",
+    "                exponent = exponent * -1\n",
+    "                \n",
+    "            result = 1\n",
+    "            \n",
+    "            for _ in range(exponent):\n",
+    "                result = result * base\n",
+    "                \n",
+    "            return result            "
    ]
   },
   {
@@ -228,9 +531,73 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 参考资料\n",
+    "\n",
+    "1. [牛客网剑指offer](https://www.nowcoder.com/ta/coding-interviews)\n",
+    "1. [知乎：剑指offer-Python版](https://zhuanlan.zhihu.com/p/75864673)\n",
+    "1. [github: 剑指offer-Python版](https://github.com/apachecn/Interview/tree/master/docs/Algorithm/%E5%89%91%E6%8C%87offer/Python)\n",
+    "1. [csdn: 剑指offer-Python版](https://blog.csdn.net/xuezhisdc/article/details/52125302)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,6 +621,12 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -264,12 +637,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.9"
   },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python37464bit166f77e74e6e4aa08a8504427989ddac",
-   "display_name": "Python 3.7.4 64-bit"
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
